--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <br/><br/><br/>
 <p  class="saerch-paratwo" >Ready to watch? Enter your email to create or restart your membership.</p>
 <br/>
-<input  class="input-email"  type="text" placeholder="Email adress ">  <button class="saerch-btn" >Get Started  <span class="simple-arrow">&gt;</span></button>
+<input  class="input-email"  type="email" placeholder="Email adress ">  <button class="saerch-btn" >Get Started  <span class="simple-arrow">&gt;</span></button>
 </div>
 </div>
 <!-- main ended -->
