--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- navbar ended -->
 
 <!-- main started -->
-
+<main>
 <div class="saerch-container" >
     <div class="main-items" >
 <h1  class="saerch-heading"  >Unlimited movies, TV <br/> shows, and more</h1>
@@ -38,18 +38,53 @@
 <input  class="input-email"  type="email" placeholder="Email adress ">  <button class="saerch-btn" >Get Started  <span class="simple-arrow">&gt;</span></button>
 </div>
 </div>
-<!-- main ended -->
-
 
 </section>
 
 
 
+<section class="section-for-cards" >
+
+
+<div class="container-for-trending-cards" >
+
+
+ <div class="movie-card">
+    <div class="big-number">1</div>
+    <img class="posterone" src="https://www.park-kino.de/images/Breite_400px_RGB/p_120921X15042025101928.jpg" alt="The Secret Life of Pets">
+  </div>
+   <div class="movie-card">
+    <div class="big-number">2</div>
+    <img class="postertwo" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSK1WZJzWfv3XRZcpZN5tFPrMBnbjY7W0F30Vjd_HNFk2xKjdLxB3KENmGhkWde9gdchQLBdw" alt="The Secret Life of Pets">
+  </div>
+
+  <div class="movie-card">
+    <div class="big-number">3</div>
+    <img class="posterthree" src="https://pbs.twimg.com/media/Gmqt55QaQAAn4qD.jpg" alt="The Secret Life of Pets">
+  </div>
+     <div class="movie-card">
+    <div class="big-number">4</div>
+    <img class="posterfour" src="https://lumiere-a.akamaihd.net/v1/images/p_studio_moana_2_poster_now_available_f4281ff6.jpeg" alt="The Secret Life of Pets">
+  </div>
+</div>
 
 
 
 
 
 
+
+
+ </main>
+<!-- main ended -->
+
+
+
+
+
+
+
+
+</section>
 </body>
 </html>
