section cards completed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <div class="movie-card">
     <div class="big-number">3</div>
-    <img class="posterthree" src="https://pbs.twimg.com/media/Gmqt55QaQAAn4qD.jpg" alt="The Secret Life of Pets">
+    <img class="posterthree" src="https://marketplace.canva.com/EAFTl0ixW_k/1/0/1131w/canva-black-white-minimal-alone-movie-poster-YZ-0GJ13Nc8.jpg" alt="The Secret Life of Pets">
   </div>
      <div class="movie-card">
     <div class="big-number">4</div>
