--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
 </section>
 
 
-
 <section class="section-for-cards" >
 
 
-<div class="container-for-trending-cards" >
+    <h1 class="cards-heading" >Trending Now</h1>
 
+
+<div class="container-for-trending-cards" >
 
  <div class="movie-card">
     <div class="big-number">1</div>
