section for ranking cards completed

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 
  <div class="movie-card">
     <div class="big-number">1</div>
-    <img class="posterone" src="https://www.park-kino.de/images/Breite_400px_RGB/p_120921X15042025101928.jpg" alt="The Secret Life of Pets">
+    <img class="poster" src="https://www.park-kino.de/images/Breite_400px_RGB/p_120921X15042025101928.jpg" alt="The Secret Life of Pets">
   </div>
    <div class="movie-card">
     <div class="big-number">2</div>
-    <img class="postertwo" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSK1WZJzWfv3XRZcpZN5tFPrMBnbjY7W0F30Vjd_HNFk2xKjdLxB3KENmGhkWde9gdchQLBdw" alt="The Secret Life of Pets">
+    <img class="poster" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSK1WZJzWfv3XRZcpZN5tFPrMBnbjY7W0F30Vjd_HNFk2xKjdLxB3KENmGhkWde9gdchQLBdw" alt="The Secret Life of Pets">
   </div>
 
   <div class="movie-card">
     <div class="big-number">3</div>
-    <img class="posterthree" src="https://marketplace.canva.com/EAFTl0ixW_k/1/0/1131w/canva-black-white-minimal-alone-movie-poster-YZ-0GJ13Nc8.jpg" alt="The Secret Life of Pets">
+    <img class="poster" src="https://preview.redd.it/first-look-posters-of-vijay-movies-since-2012-v0-uyr29juv7i7b1.jpg?width=640&crop=smart&auto=webp&s=f53b1cb5f7b9b43cfdd0b535f15ccf71d0417654" alt="The Secret Life of Pets">
   </div>
      <div class="movie-card">
     <div class="big-number">4</div>
-    <img class="posterfour" src="https://lumiere-a.akamaihd.net/v1/images/p_studio_moana_2_poster_now_available_f4281ff6.jpeg" alt="The Secret Life of Pets">
+    <img class="poster" src="https://lumiere-a.akamaihd.net/v1/images/p_studio_moana_2_poster_now_available_f4281ff6.jpeg" alt="The Secret Life of Pets">
   </div>
 </div>
 
