--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <!-- main started -->
 <main>
+
+
+<!-- membership container started -->
+
 <div class="saerch-container" >
     <div class="main-items" >
 <h1  class="saerch-heading"  >Unlimited movies, TV <br/> shows, and more</h1>
@@ -38,9 +42,14 @@
 <input  class="input-email"  type="email" placeholder="Email adress ">  <button class="saerch-btn" >Get Started  <span class="simple-arrow">&gt;</span></button>
 </div>
 </div>
+<!-- membership container ended -->
 
 </section>
 
+
+<!-- 
+
+section for ranking cards started -->
 
 <section class="section-for-cards" >
 
@@ -69,6 +78,91 @@
   </div>
 </div>
 
+<!-- 
+
+section for ranking cards ended -->
+
+
+
+
+<!-- section for join cards started -->
+
+
+<section class="section-for-join-cards">
+    <h1 class="join-heading" >More Reasons to Join</h1>
+<div class="container-for-join-cards" >
+
+<div class="join-cards">
+<h1 class="card-heading" >Enjoy on your <br> TV
+</h1>
+<p class="card-para" >Watch on Smart TVs, <br>Playstation, Xbox, Chromecast, <br>Apple TV, Blu-ray players, and more.
+</p>
+<div class="icon" >
+<i class="fa-solid fa-tv"></i></div>
+
+</div>
+
+<div  class="join-cards"  >
+
+<h1 class="card-heading" >Download  <br> your shows  to  watch <br>offline
+</h1>
+<p class="card-para" >Save your favorites easily  <br>and always have something to watch.
+
+
+</p>
+<div class="icon" >
+  <i class="fa-solid fa-download"></i>
+ </div>
+
+
+</div>
+
+
+
+
+
+
+<div   class="join-cards"  >
+
+<h1 class="card-heading" >Watch <br>everywhere
+
+</h1>
+<p class="card-para" >
+Stream unlimited movies <br> and   TV showson your phone, 
+
+tablet, <br> laptop, and TV.
+
+
+
+
+</p>
+<div class="icon" >
+
+
+<i class="fa-solid fa-location-crosshairs"></i>
+
+
+</div>
+
+
+</div>
+
+
+<div  class="join-cards"  >
+
+<h1 class="card-heading" >Create profiles for  <br> kids
+
+</h1>
+<p class="card-para" >Send kids on adventures with their <br> favorite characters in a space made just   <br>for them — free 
+
+
+
+</p>
+<div class="icon" >
+<i class="fa-solid fa-users-between-lines"></i></div>
+
+
+</div>
 
 
 
@@ -76,8 +170,20 @@
 
 
 
- </main>
-<!-- main ended -->
+
+
+
+
+
+
+
+
+</div>
+</section>
+<!-- section for join cards ended -->
+
+
+
 
 
 
@@ -87,5 +193,10 @@
 
 
 </section>
+ </main>
+<!-- main ended -->
+
+
+   <script src="https://kit.fontawesome.com/9aded8b196.js" crossorigin="anonymous"></script>
 </body>
 </html>
