--- a/index.html
+++ b/index.html
@@ -86,101 +86,66 @@ section for ranking cards ended -->
 
 
 <!-- section for join cards started -->
-
-
-<section class="section-for-join-cards">
-    <h1 class="join-heading" >More Reasons to Join</h1>
-<div class="container-for-join-cards" >
-
-<div class="join-cards">
-<h1 class="card-heading" >Enjoy on your <br> TV
+<h1 class="join-card-heading" >More Reasons to Join
 </h1>
-<p class="card-para" >Watch on Smart TVs, <br>Playstation, Xbox, Chromecast, <br>Apple TV, Blu-ray players, and more.
-</p>
-<div class="icon" >
-<i class="fa-solid fa-tv"></i></div>
+  <div class="card-container">
+    <div class="card">
 
-</div>
 
-<div  class="join-cards"  >
-
-<h1 class="card-heading" >Download  <br> your shows  to  watch <br>offline
-</h1>
-<p class="card-para" >Save your favorites easily  <br>and always have something to watch.
-
+<i class="fa-solid fa-tv"></i>
+      <h3>Enjoy on your TV
+</h3>
+      <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
 
 </p>
-<div class="icon" >
+    </div>
+    <div class="card">
+
   <i class="fa-solid fa-download"></i>
- </div>
-
-
-</div>
-
-
-
-
-
-
-<div   class="join-cards"  >
-
-<h1 class="card-heading" >Watch <br>everywhere
-
-</h1>
-<p class="card-para" >
-Stream unlimited movies <br> and   TV showson your phone, 
-
-tablet, <br> laptop, and TV.
-
-
+      <h3>Download your shows to watch offline
+</h3>
+      <p>
+        Save your favorites easily and always have something to watch.
 
 
 </p>
-<div class="icon" >
+    </div>
+    <div class="card">
+      <i class="fa-solid fa-location-crosshairs"></i>
+      <h3>Watch everywhere
+</h3>
+      <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
 
-
-<i class="fa-solid fa-location-crosshairs"></i>
-
-
-</div>
-
-
-</div>
-
-
-<div  class="join-cards"  >
-
-<h1 class="card-heading" >Create profiles for  <br> kids
-
-</h1>
-<p class="card-para" >Send kids on adventures with their <br> favorite characters in a space made just   <br>for them — free 
-
+</p>
+    </div>
+<div class="card">
+<i class="fa-solid fa-users-between-lines"></i>
+      <h3>Create profiles for kids
+</h3>
+      <p>
+        Send kids on adventures with their favorite characters in a space made just for them — free with your membership.
 
 
 </p>
-<div class="icon" >
-<i class="fa-solid fa-users-between-lines"></i></div>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-</section>
+    </div>
+  </div>
 <!-- section for join cards ended -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
