--- a/index.html
+++ b/index.html
@@ -130,36 +130,80 @@ section for ranking cards ended -->
     </div>
   </div>
 <!-- section for join cards ended -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
+
+
+
+
  </main>
 <!-- main ended -->
+
+
+
+
+<!-- Frequently Asked Questions started -->
+
+<div class="conatiner-for-asked" >
+
+  <label>Frequently Asked Questions</label>
+  <br/><br/><br>/<br/><br/>
+<select     id="options" name="options" >
+  <option     value="option" >What is Netflix? </option>
+
+  <option    value="option">Netflix is a streaming   <br> service that offers a wide variety of award-winning TV shows, movies,<br> anime,  
+</option>
+<option  value="option">You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. 
+</option>
+</select>
+
+<select     name="options" id="options">
+<option      value="option">  How much does Netflix cost? </option>
+<option      value="option">  Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed 
+ </option>
+
+
+</select>
+<select name="options" id="options">
+
+<option    value="option"> Where can I watch?</option>
+  <option     value="option">Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com  
+</option>
+<option value="option">You can also download your favorite shows with the iOS or Android app. Use downloads 
+</option>
+</select>
+
+<select     name="options" id="options">
+  <option     value="option">How do I cancel?</option>
+  <option     value="option">Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel
+</option>
+</select>
+<select    name="options" id="options">
+  <option   value="option">What can I watch on Netflix?</option>
+  <option    value="option">Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals,  
+
+</option>
+</select>
+<select     name="options" id="options">
+  <option    value="option"> Is Netflix good for kids? </option>
+  <option   value="option">The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+</option>
+<option    value="option">Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids
+</option>
+</select>
+</div>
+<!-- Frequently Asked Questions ended -->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
    <script src="https://kit.fontawesome.com/9aded8b196.js" crossorigin="anonymous"></script>
