--- a/index.html
+++ b/index.html
@@ -190,8 +190,123 @@ section for ranking cards ended -->
 <option    value="option">Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids
 </option>
 </select>
+<br/><br/><br/>
+
 </div>
 <!-- Frequently Asked Questions ended -->
+
+
+
+
+
+
+
+<!-- 
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-left">
+      <h1>Netflix</h1>
+      <p>Unlimited movies, TV shows, and more. Watch anywhere. Cancel anytime.</p>
+    </div>
+    <div class="footer-right">
+      <div class="footer-column">
+        <h2>Company</h2>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Investor Relations</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h2>Help</h2>
+        <ul>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Investor Relations</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h2>Legal</h2>
+        <ul>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Corporate Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 Netflix, Inc. All Rights Reserved.</p>
+  </div>
+</footer>
+
+
+
+
+ -->
+
+
+
+
+
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-left">
+      <h1>Netflix</h1>
+      <p>Unlimited movies, TV shows, and more. Watch anywhere. Cancel anytime.</p>
+    </div>
+    <div class="footer-right">
+      <div class="footer-column">
+        <h2>Company</h2>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Investor Relations</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h2>Help</h2>
+        <ul>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Investor Relations</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h2>Legal</h2>
+        <ul>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Corporate Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 Netflix, Inc. All Rights Reserved.</p>
+  </div>
+  <div class="footer-subscribe">
+    <form action="#">
+      <input type="email" placeholder="Enter your email" required>
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+  <div class="footer-options">
+    <label for="options">Choose an option:</label>
+    <select id="options" name="options">
+      <option value="option1">Option 1</option>
+      <option value="option2">Option 2</option>
+      <option value="option3">Option 3</option>
+    </select>
+  </div>
+</footer>
+
 
 
 
