Netflix Responsive Website completed

--- a/index.html
+++ b/index.html
@@ -194,20 +194,7 @@ section for ranking cards ended -->
 
 </div>
 <!-- Frequently Asked Questions ended -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!-- footer   started -->
 <footer class="footer">
   <div class="footer-content">
     <div class="footer-left">
@@ -254,21 +241,7 @@ section for ranking cards ended -->
     </form>
   </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!-- footer   ended -->
    <script src="https://kit.fontawesome.com/9aded8b196.js" crossorigin="anonymous"></script>
 </body>
 </html>
